# gameengine

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  build_shaders.ps1  build_shaders.sh
assets/shaders/: main.frag  main.vert
imgui/: CMakeLists.txt
src/: main.cpp
src/app/: engine_app.cpp  engine_app.hpp
src/engine/: render_device.cpp  render_device.hpp  render_system.cpp  render_system.hpp  swapchain.cpp  swapchain.hpp  utils.hpp  window.cpp  window.hpp
src/engine/render/: material.cpp  material.hpp  shader_object.cpp  shader_object.hpp  vertex_buffer.cpp  vertex_buffer.hpp  window_renderer.cpp  window_renderer.hpp
